# WBot-Wheeled-Leg-Robot

./: .gitignore  README.md
firmware/ESP32_Camera_Node/: platformio.ini
firmware/ESP32_Camera_Node/src/: main.cpp
firmware/controlBoard/: 1.Vscode-servo.rar
firmware/controlBoard/1.Vscode-servo/servo/src/: main.cpp
firmware/controlBoard/fddebug/: CH340_URT.rar  FD1.9.6(190805).7z  FD1.9.6(200107)-EN-U.7z  FD1.9.8.1(201204).7z  FD1.9.8.2(220714).7z  FD1.9.8.3(231205).7z  FD1.9.8.4(240227).7z  FD1.9.8.5(250729).7z  FTCanDebug-251121.7z  FUServo_Debuger_2.0(250519).7z  LICENSE  RC_Servo_Assist_2.3(241208).7z  RC_Servo_Assist_2.4(251010).7z  README.md  ft_setup_bat-251222.7z
firmware/controlBoard/libraries/Simple_FOC/src/common/: pid.h
firmware/controlBoard/wl_pro_robot/: platformio.ini
firmware/controlBoard/wl_pro_robot/src/: my_wifi.cpp  my_wifi.h  wifi.cpp.bak  wl_pro_robot.ino
ros2_ws/src/wbot_control/: CMakeLists.txt  package.xml
ros2_ws/src/wbot_control/src/: lqr_controller.cpp  thigh_pd_controller.cpp
ros2_ws/src/wbot_description/: CMakeLists.txt  package.xml
ros2_ws/src/wbot_description/config/: ros2_controllers.yaml
ros2_ws/src/wbot_description/launch/: display.launch  gazebo.launch
ros2_ws/src/wbot_description/meshes/: left_wheel_link.STL  right_wheel_link.STL
ros2_ws/src/wbot_description/urdf/: robot.csv  robot.urdf
simulation/: calc_lqr.m  lqr_verify.slx
